--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 # Core modules (mandatory)
-jupyterlite-core==0.2.2
-jupyterlab~=4.0.9
-notebook~=7.0.6
+jupyterlite-core~=0.4.0
+jupyterlab~=4.2.4
+notebook~=7.2.1
 
 
 # Python kernel (optional)
-jupyterlite-pyodide-kernel==0.2.0
+jupyterlite-pyodide-kernel~=0.4.1
 
 # JavaScript kernel (optional)
-jupyterlite-javascript-kernel==0.2.2
+jupyterlite-javascript-kernel~=0.3.0
 
 # Language support (optional)
 jupyterlab-language-pack-fr-FR
 jupyterlab-language-pack-zh-CN
 
 # SQLite kernel (optional)
-jupyterlite-xeus-sqlite==0.2.1
+jupyterlite-xeus-sqlite~=0.2.1
 # P5 kernel (optional)
-jupyterlite-p5-kernel==0.1.0
+jupyterlite-p5-kernel~=0.1.1
 # Lua kernel (optional)
-jupyterlite-xeus-lua==0.3.1
+jupyterlite-xeus-lua~=0.3.3
 
 # JupyterLab: Fasta file renderer (optional)
 jupyterlab-fasta>=3.3.0,<4
