--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Build and Deploy
 
 on:
   push:
-    # branches:
-    #   - main
+    branches:
+      - main
   pull_request:
     branches:
       - '*'
@@ -32,7 +32,7 @@ jobs:
 
   deploy:
     needs: build
-    # if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     permissions:
       pages: write
       id-token: write
